--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.holder__head {
+  position: sticky;
+  z-index: 1;
+  bottom: calc(var(--b) * 2em -200px);
+  top: calc(var(--t) * 2em + 200px);
+  margin-bottom: 200px;
+}
